// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-fake-menu-button Borderless 1`] = `
<span
  className="fake-menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn fake-menu-button__button btn--borderless"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        eBay Menu without borders!
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-fake-menu-button Default 1`] = `
<span
  className="fake-menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn fake-menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        eBay Menu
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-fake-menu-button Disabled 1`] = `
<span
  className="fake-menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn fake-menu-button__button btn--secondary"
    disabled={true}
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        eBay Menu
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-fake-menu-button Expanded 1`] = `
<span
  className="fake-menu-button"
>
  <button
    aria-expanded={true}
    aria-haspopup={true}
    aria-live={null}
    className="btn fake-menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        eBay Menu
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
  <div
    className="fake-menu-button__menu fake-menu"
    tabIndex={-1}
  >
    <ul
      className="fake-menu__items"
      tabIndex={-1}
    >
      <li>
        <a
          className="fake-menu__item"
          href="http://ebay.com"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <span>
            item 1 that has very long text
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-small"
            focusable={false}
            height="16px"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-small"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          className="fake-menu__item"
          href="http://ebay.com"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <span>
            item 2
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-small"
            focusable={false}
            height="16px"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-small"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          className="fake-menu__item"
          href="http://ebay.com"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <span>
            item 3
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-small"
            focusable={false}
            height="16px"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-small"
            />
          </svg>
        </a>
      </li>
    </ul>
  </div>
</span>
`;

exports[`Storyshots ebay-fake-menu-button Priority: Primary 1`] = `
<span
  className="fake-menu-button"
>
  <button
    a11y-text="Menu"
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn fake-menu-button__button btn--primary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        Primary
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-fake-menu-button Variant: Overflow 1`] = `
<span
  className="fake-menu-button"
>
  <button
    a11y-text="Menu"
    aria-expanded={false}
    aria-haspopup={true}
    className="fake-menu-button__button icon-btn"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="icon icon--overflow"
      focusable={false}
      height="24px"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlinkHref="#icon-overflow"
      />
    </svg>
  </button>
</span>
`;

exports[`Storyshots ebay-fake-menu-button With Custom Label 1`] = `
<span
  className="fake-menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn fake-menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span
          style={
            Object {
              "background": "url(https://ir.ebaystatic.com/pictures/aw/pics/cmp/ds3/sprds3_21.png)",
              "display": "inline-block",
              "height": "20px",
              "marginRight": "8px",
              "verticalAlign": "middle",
              "width": "26px",
            }
          }
        />
         Fun with flags!
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-fake-menu-button With Separator 1`] = `
<span
  className="fake-menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn fake-menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        Complex menu
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-fake-menu-button With icon 1`] = `
<span
  className="fake-menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn fake-menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <svg
          aria-hidden={true}
          className="icon icon--settings"
          focusable={false}
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-settings"
          />
        </svg>
        Settings
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-fake-menu-button Without Text 1`] = `
<span
  className="fake-menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-label="eBay Menu without text"
    aria-live={null}
    className="btn fake-menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-fake-menu-button Without toggle icon 1`] = `
<span
  className="fake-menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn fake-menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    Menu
  </button>
</span>
`;
